--- a/index.html
+++ b/index.html
@@ -1,1 +1,106 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1.0">
+  <title> Welcome </title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="scripts.js"></script>
+  <link href="//db.onlinewebfonts.com/c/9a7e574c3eda05d71d03345d3f9e268e?family=FuturaLTW01-LightOblique"
+    rel="stylesheet" type="text/css" />
+</head>
+<div id="normalHeader">
+  <header>
+    <div>
+      <div>
+        <ul class="navbar" id="navbar">
+          <img src="img/head.png" alt="Headshot" id="headPhoto">
+        </ul>
+        <p id="headerName">Catherine Pham</p>
+        <p id="headerEmail">email@gmail.com</p>
+      </div>
+      <hr>
+      <ul class="navbar" id="navbar">
+        <li><a class="navbutton" href="#about" id="aboutBtn">About</a></li>
+        <li><a class="navbutton" href="#edu" id="eduBtn">Education </a></li>
+        <li><a class="navbutton" href="#pub" id="pubBtn">Publications</a></li>
+        <li><a class="navbutton" href="#research" id="researchBtn">Research</a></li>
+      </ul>
+    </div>
+  </header>
+</div>
+
+<div id="miniHeader" class="">
+  <header>
+    <div>
+      <ul id="miniNavBar">
+        <li class="iconStack"><a href="javascript:void(0);" id="barStack" onclick="reactNav()">
+            <i class="fa fa-bars"></i>
+          </a>
+        </li>
+        <li><a class="navbutton" href="#about" id="">About</a></li>
+        <li><a class="navbutton" href="#edu" id="">Education </a></li>
+        <li><a class="navbutton" href="#pub" id="">Publications</a></li>
+        <li><a class="navbutton" href="#research" id="">Research</a></li>
+      </ul>
+    </div>
+  </header>
+</div>
+
+<body onload="init()">
+
+  <div id=wrapper>
+    <span class="anchor" id=about></span>
+    <section class="first">
+      <div class="container">
+        <h3> About</h3>
+        <p>Placeholder Text Placeholder Text Placeholder Text Placeholder Text Placeholder
+          Text
+          Placeholder Text Placeholder Text Placeholder Text Placeholder Text Placeholder Text Placeholder Text
+          Placeholder
+          Text Placeholder Text Placeholder Text Placeholder Text</p>
+      </div>
+    </section>
+    <span class="anchor" id=edu></span>
+    <section>
+      <div class="container">
+        <h3> About</h3>
+        <p>Placeholder Text Placeholder Text Placeholder Text Placeholder Text Placeholder Text
+          Placeholder Text Placeholder Text Placeholder Text Placeholder Text Placeholder Text Placeholder Text
+          Placeholder
+          Text Placeholder Text Placeholder Text Placeholder Text</p>
+      </div>
+    </section>
+    <span class="anchor" id=pub></span>
+    <section>
+      <div class="container">
+        <h3> About</h3>
+        <p>Placeholder Text Placeholder Text Placeholder Text Placeholder Text Placeholder Text
+          Placeholder Text Placeholder Text Placeholder Text Placeholder Text Placeholder Text Placeholder Text
+          Placeholder
+          Text Placeholder Text Placeholder Text Placeholder Text</p>
+      </div>
+    </section>
+    <span class="anchor" id=research></span>
+    <section>
+      <div class="container">
+        <h3> About</h3>
+        <p style="margin-bottom: 1000px;">Placeholder Text Placeholder Text Placeholder Text Placeholder Text
+          Placeholder Text
+          Placeholder Text Placeholder Text Placeholder Text Placeholder Text Placeholder Text Placeholder Text
+          Placeholder
+          Text Placeholder Text Placeholder Text Placeholder Text</p>
+      </div>
+    </section>
+
+
+    <footer>
+    </footer>
+
+  </div>
+
+</body>
+
+</html>
